# pygeofilter-duckdb

./: .gitignore  LICENSE  README.md  setup.cfg
example/: Query-STAC-Geoparquet.ipynb
example/data-files/: Sentinel-2-L2A_20190127_20190202.parquet
src/pygeofilter/backends/duckdb/: evaluate.py
tests/: test_duckdb.py
