[metadata]
name = pygeofilter-duckdb
version = 1.0
description = pygeofilter extension to support of DuckDB SQL within Geoparquet files
long_description = file: README.md 
long_description_content_type = text/markdown
author = Jonas Eberle 
author_email = jonas.eberle@dlr.de
url = https://github.com/DLR-terrabyte/pygeofilter-duckdb
keywords =
    pygeofilter
    duckdb
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    pygeofilter@git+https://github.com/geopython/pygeofilter.git

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
example =
    duckdb
    stac-geoparquet

[tool:pytest]
addopts = -ra -q
testpaths = tests
